tests/ui/macros/issue-83344.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/issue-83344.rs:4:15
   |
LL |     println!("{}\
   |               ^^

error: aborting due to 1 previous error

